# spco2_boo_problog

./: CMakeLists.txt  README.md  package.xml
bash/: reset-result-output.bash
data/airplane_toy/: prior_knowledge_inference_result.txt  weight_average_inference_result.txt
data/apple/: weight_average_inference_result.txt
data/banana/: prior_knowledge_inference_result.txt
data/bath_slipper/: prior_knowledge_inference_result.txt  weight_average_inference_result.txt
data/chips_bag/: prior_knowledge_inference_result.txt  weight_average_inference_result.txt
data/coffee/: prior_knowledge_inference_result.txt  weight_average_inference_result.txt
data/cracker_box/: prior_knowledge_inference_result.txt  weight_average_inference_result.txt
data/cup/: cross_modal_inference_result.txt  prior_knowledge_inference_result.txt
data/fruits_juice/: prior_knowledge_inference_result.txt  weight_average_inference_result.txt
data/orange/: prior_knowledge_inference_result.txt  weight_average_inference_result.txt
data/penguin_doll/: cross_modal_inference_result.txt  inference_result.csv  logical_inference_result.txt  prior_knowledge_inference_result.txt  prob.csv  weight_average_inference_result.txt
data/pig_doll/: cross_modal_inference_result.txt  prior_knowledge_inference_result.txt  prob.csv  (+1 more)
src/: W_list.csv  __init__.py  cross_modal_object2gaussian_index.py  cross_modal_object2place.py  display_object_label_distribution.py  display_word_distribution.py  human_commander.py  trial.py  try.py  weight_average.py  without_category_human_commander.py
src/nouse/: try.py  (+4 more)
(+46 files in other folders)
